update readme adding java memory settings for maven